--- a/src/style/home.css
+++ b/src/style/home.css
@@ -27,9 +27,9 @@
     object-fit: cover;
 }
 
-.hero_content{
+/* .hero_content{
     padding-top: 3.5rem;
-}
+} */
 
 .hero_img-box{
     padding-top: 2rem;
