--- a/src/style/about.css
+++ b/src/style/about.css
@@ -1,7 +1,7 @@
 /* ================== About Hero Section ================== */
-.about_hero {
+/* .about_hero {
   padding: 2rem 0;
-}
+} */
 
 .about_content{
     margin-bottom: 100px;
